# ferrum

./: Cargo.toml  LICENSE  README.md
crates/ferrum/: Cargo.toml
crates/ferrum/src/: main.rs  mtleng.rs
crates/ferrum/src/shmet/: triangle.metal
crates/scenes/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  math.rs
src/: main.rs  mtleng.rs  mtlrend.rs
src/shmet/: triangle.metal
