[workspace]
resolver = "2"
members = [
    "crates/ferrum",
    "crates/core",
    "crates/io",
    "crates/scenes",
    "crates/projects",
    "crates/shared"
]

# common dependencies across all crates
[workspace.dependencies]
glfw = "0.62.0"
objc2 = "0.6.4"
objc2-metal = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-app-kit = "0.3.2"
